--- a/public/pages/pickAndBan/index.html
+++ b/public/pages/pickAndBan/index.html
@@ -7,11 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
-  <title>Krosmaga Hub</title>
+  <title>Krosmaga Hub | Pick & Ban</title>
   <script defer src="/socket.io/socket.io.js"></script>
-  <script defer src="/script.js"></script>
+  <script defer src="/pages/pickAndBan/script.js"></script>
 </head>
 <body>
-  <a href="/pages/pickAndBan/index.html" class="link">Pick & Ban</a>
+  <a href="/index.html" class="link">Accueil</a>
 </body>
 </html>
